# ros2_ws

activity1_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
activity1_ws/log/: latest_build  latest_list
activity1_ws/src/activity1_cpp_pkg/: CMakeLists.txt
activity1_ws/src/activity1_cpp_pkg/src/: battery_node.cpp  led_panel_node.cpp  number_counter_cpp_node_file.cpp  number_publisher_cpp_node_file.cpp
my_robot/: my_robot.dtd  my_robot.urdf
nav2_ws/: nav2_test.py
open_manipulator_ws/install/: local_setup.sh  setup.ps1  setup.sh
open_manipulator_ws/log/: latest_build
project1_ws/install/: local_setup.sh  setup.sh
project1_ws/log/: latest_build  latest_list
project1_ws/maps/: map (copy).pgm  map.pgm  map.yaml
project1_ws/scripts/: nav2_test.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws2/log/: latest_build
ros2_ws2_project/install/: local_setup.sh  setup.sh
ros2_ws2_project/log/: latest_build
ros2_ws3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws3/log/: latest_build
snake_game_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
snake_game_ws/log/: latest_build  latest_list
tb3/maps/: custom_map.pgm  custom_map.yaml  custom_map_old.pgm  maze.pgm  maze.yaml  my_map (copy).pgm  my_map.pgm  my_map.yaml  my_world.pgm  my_world.yaml
tb3/world/: world1.world  world2.world
tb3_ws/install/: local_setup.sh  setup.sh
tb3_ws/log/: latest_build
(+710 files in other folders)
